remediating all SonarQube quality and security findings